Fix landing page on mobile

--- a/frontend/src/styles/card.scss
+++ b/frontend/src/styles/card.scss
@@ -95,7 +95,7 @@
 
 @media (max-width: 800px) {
     html, body, .root, .container {
-        height: 100%;
+        min-height: 100%;
     }
     .map {
         min-height:100%;
